--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,11 +15,11 @@
     <meta charset="utf-8">
 
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-    <link rel="icon" type="image/png" href="/assets/images/dove-flame-16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="/assets/images/dove-flame-32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/assets/images/dove-flame-96.png" sizes="96x96">
-    <link rel="icon" type="image/png" href="/assets/images/dove-flame-196.png" sizes="196x196">
-    <link rel="icon" type="image/png" href="/assets/images/dove-flame-512.png" sizes="512x512">
+    <link rel="icon" type="image/png" href="/assets/images/cross-16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="/assets/images/cross-32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/assets/images/cross-96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="/assets/images/cross-196.png" sizes="196x196">
+    <link rel="icon" type="image/png" href="/assets/images/cross-512.png" sizes="512x512">
 
     {% if site.css == 'inline' %}
     <style>
