--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="fn pv4 ph3 ph5-ns tc">
   <div class="mt4">
-  <soan class="link dib h2 w2 mr3">Join our Telegram Channel for announcements <a href="https://t.me/narrowwaychurch"" title="Telegram">
+  <span class="f6 link dim gray dib mr3 mr4-ns">Join our Telegram Channel for announcements <a href="https://t.me/narrowwaychurch"" title="Telegram">
       <svg width="16px" height="16px" viewBox="0 0 1000 1000" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
         <!-- Generator: Sketch 53.2 (72643) - https://sketchapp.com -->
         <title>Artboard</title>
