--- a/_sass/_font-family.scss
+++ b/_sass/_font-family.scss
@@ -105,3 +105,8 @@ code, .code {
                serif;
 }
 
+.questrial-regular {
+  font-family: "Questrial", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
