Adjust some language in about section

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,11 @@
-<footer class="fn pv4 ph3 ph5-ns tc white" style="background-color: #73736b;">
-  <div class="mt0">
-    <a href="https://www.facebook.com/narrowwaychurchportangeles/" target="_blank"><img style="width: 24px; height: 24 px;" src="assets/images/Facebook_Logo_Primary.png"></img></a>
-  </div>
-  <div class="mt1">
-    <span class="f6 link dim dib mr3 mr4-ns">Copyright &copy; {{ "now" | date: "%Y" }} Narrow Way Church</span>
+<footer class="fn pv4 ph3 ph5-ns white" style="background-color: #73736b;">
+  <div class="w-100 flex">
+    <div class="w-80 mt0 tl">
+      <p class="mv0 mh1 f6 link dim dib">Copyright &copy; {{ "now" | date: "%Y" }} Narrow Way Church</p>
+    </div>
+    <div class="w-20 mt0 tr">
+      <a href="https://www.facebook.com/narrowwaychurchportangeles/" target="_blank"><img style="width: 24px; height: 24 px;" src="assets/images/Facebook_Logo_Primary.png"></img></a>
+    </div>
   </div>
 </footer>
 </body>
