--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="fn pv4 ph3 ph5-ns white" style="background-color: #73736b;">
   <div class="w-100 flex">
     <div class="w-80 mt0 tl">
-      <p class="mv0 mh1 f6 link dim dib">Copyright &copy; {{ "now" | date: "%Y" }} Narrow Way Church</p>
+      <p class="mv0 mh1 f6 link dim dib">Copyright &copy; 2022-{{ "now" | date: "%Y" }} Narrow Way Church</p>
     </div>
     <div class="w-20 mt0 tr">
       <a href="https://www.facebook.com/narrowwaychurchportangeles/" target="_blank"><img style="width: 24px; height: 24 px;" src="assets/images/Facebook_Logo_Primary.png"></img></a>
