Add Ministry Fair page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,9 @@
       <p class="mv0 mh1 f6 link dim dib">Copyright &copy; 2022-{{ "now" | date: "%Y" }} Narrow Way Church</p>
     </div>
     <div class="w-20 mt0 tr">
-      <a href="https://www.facebook.com/narrowwaychurchportangeles/" target="_blank"><img style="width: 24px; height: 24 px;" src="assets/images/Facebook_Logo_Primary.png"></img></a>
+      <a href="https://www.facebook.com/narrowwaychurchportangeles/" target="_blank"><img style="width: 24px; height: 24 px;" src="assets/images/Facebook_Logo_Primary.png"></img></a>&nbsp;
+      <a href="https://www.youtube.com/@NarrowWayChurchAgnew" target="_blank"><img style="width: 24px; height: 24 px;" src="assets/images/youtube-logo.png"></img></a>&nbsp;
+      <a href="https://t.me/narrowwaychurch" target="_blank"><img style="width: 24px; height: 24 px;" src="assets/images/telegram-logo.png"></img></a>
     </div>
   </div>
 </footer>
