--- a/_sass/_font-family.scss
+++ b/_sass/_font-family.scss
@@ -95,6 +95,10 @@ code, .code {
                 serif;
 }
 
+.century-gothic {
+  font-family: century-gothic, 'helvetica neue', helvetica, sans-serif;
+}
+
 .garamond {
   font-family: garamond,
                serif;
