--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="fn pv4 ph3 ph5-ns white" style="background-color: #73736b;">
+<footer class="fn pv4 ph3 ph5-ns white" style="max-width: 1000px; margin: 0 auto; background-color: #fff; color: #0c0c0c;">
   <div class="w-100 flex">
     <div class="w-80 mt0 tl">
       <p class="mv0 mh1 f6 link dim dib">Copyright &copy; 2022-{{ "now" | date: "%Y" }} Narrow Way Church</p>
