--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,5 +1,5 @@
 {% include header.html %}
-<body class="w-100 sans-serif" style="background-color: #73736b;">
+<body class="w-100 sans-serif" style="background-color: #fff; color: #0c0c0c;">
   {{ content}}
 
 {% include footer.html %}
