--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,7 +7,7 @@
   <article class="century-gothic" style="max-width: 1000px; margin: 0 auto; padding: 90px 90px 0;">
     <header class="dt w-100">
       <div class="fl w-third pa2">
-        <img src="assets/images/logo only circle.png">
+        <a href="/"><img src="assets/images/logo only circle.png"></a>
       </div>
       <div class="fl w-two-thirds pa2">
         <h1 class="f3 f-subheadline-l measure mv4 questrial-regular tc">{{ page.title }}</h1>
