--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
-<footer class="fn pv4 ph3 ph5-ns white" style="max-width: 1000px; margin: 0 auto; background-color: #fff; color: #0c0c0c;">
-  <div class="w-100 flex">
-    <div class="w-80 mt0 tl">
+<footer class="fn">
+  <div class="w-100 flex-ns">
+    <div class="w-100 w-80-ns mt1 tl-ns tc">
       <p class="mv0 mh1 f6 link dim dib">Copyright &copy; 2022-{{ "now" | date: "%Y" }} Narrow Way Church</p>
     </div>
-    <div class="w-20 mt0 tr">
+    <div class="w-100 w-20-ns mt1 tr-ns tc">
       <a href="https://www.facebook.com/narrowwaychurchportangeles/" target="_blank"><img style="width: 24px; height: 24 px;" src="assets/images/Facebook_Logo_Primary.png"></img></a>&nbsp;
       <a href="https://www.youtube.com/@NarrowWayChurchAgnew" target="_blank"><img style="width: 24px; height: 24 px;" src="assets/images/youtube-logo.png"></img></a>&nbsp;
       <a href="https://t.me/narrowwaychurch" target="_blank"><img style="width: 24px; height: 24 px;" src="assets/images/telegram-logo.png"></img></a>
