--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,17 +4,17 @@
 
   <p class="clip"><a href="#content">Skip to content</a></p>
 
-  <article class="century-gothic" style="max-width: 1000px; margin: 0 auto; padding: 90px 90px 0;">
+  <article class="century-gothic">
     <header class="dt w-100">
-      <div class="fl w-third pa2">
+      <div class="fl w-third pa2-ns pv4">
         <a href="/"><img src="assets/images/logo only circle.png"></a>
       </div>
       <div class="fl w-two-thirds pa2">
-        <h1 class="f3 f-subheadline-l measure mv4 questrial-regular tc">{{ page.title }}</h1>
-        <h2 class="f4 tc">{{ page.description }}</h2>
+        <h1 class="f2 lh-title measure mv4 tc">{{ page.title }}</h1>
+        <h2 class="f5 tc lh-copy">{{ page.description }}</h2>
       </div>
     </header>
-    <div class="pt5 pb5 vh-50 w-100 mr-auto-ns ml-auto-ns">
+    <div class="helvetica pa2 min-h-100 w-100 mr-auto-ns ml-auto-ns">
       {{ content}}
     </div>
   </article>
